Apartado de tecnologías - Se agregan íconos de las tecnologías que sé y he usado - Se agregan al template - Se agrega funcionalidad para aquellos íconos que tienen versión en light y dark

--- a/index.html
+++ b/index.html
@@ -137,18 +137,6 @@
             explorar mi pasión por la música como DJ principiante, compartiendo mis mezclas de
             música electrónica en mi propio podcast <a href="https://www.ivoox.com/podcast-daydream_sq_f1686477_1.html" target="_blank" class="font-bold">DAYDREAM</a>.
           </p>
-          <!--<h2 class="text-gray-400 font-medium">HTML</h2>
-          <div class="w-full bg-gray-200 h-1.5 rounded-md">
-            <div class="w-full bg-teal-600 h-1.5 rounded-md"></div>
-          </div>
-          <h2 class="text-gray-400 font-medium">Javascript</h2>
-          <div class="w-full bg-gray-200 h-1.5 rounded-md">
-            <div class="w-4/6 bg-teal-600 h-1.5 rounded-md"></div>
-          </div>
-          <h2 class="text-gray-400 font-medium">React</h2>
-          <div class="w-full bg-gray-200 h-1.5 rounded-md">
-            <div class="w-5/6 bg-teal-600 h-1.5 rounded-md"></div>
-          </div>-->
         </div>
       </div>
     </div>
@@ -156,8 +144,71 @@
     <!-- tecnologías -->
     <div id="technologies" class="pt-20 dark:bg-slate-900">
       <div class="container mx-auto">
-        <div class="flex flex-col items-center">
-          <h1 class="text-teal-600 font-bold">TECNOLOGÍAS</h1>
+        <div class="flex flex-col gap-7">
+          <div class="flex flex-col items-center">
+            <h1 class="text-teal-600 font-bold">TECNOLOGÍAS</h1>
+          </div>
+  
+          <div class="flex flex-row items-center justify-around">
+            <img src="./assets/img/technologies/light/php.svg" class="technology technologies" alt="php">
+            <div class="flex flex-col items-center gap-2">
+              <img src="./assets/img/technologies/laravel.svg" class="technology" alt="laravel">
+              <span class="hidden md:block md:text-sm lg:text-base text-gray-600 dark:text-gray-400">Laravel</span>
+            </div>
+            <div class="flex flex-col items-center gap-2">
+              <img src="./assets/img/technologies/angular.svg" class="technology" alt="angular">
+              <span class="hidden md:block md:text-sm lg:text-base text-gray-600 dark:text-gray-400">Angular</span>
+            </div>
+            <div class="flex flex-col items-center gap-2">
+              <img src="./assets/img/technologies/javascript.svg" class="technology" alt="javascript">
+              <span class="hidden md:block md:text-sm lg:text-base text-gray-600 dark:text-gray-400">Javascript</span>
+            </div>
+            <img src="./assets/img/technologies/light/jquery.svg" class="technology technologies" alt="jquery">
+          </div>
+          <div class="flex flex-row items-center justify-around">
+            <div class="flex flex-col items-center gap-2">
+              <img src="./assets/img/technologies/mysql.svg" class="technology" alt="mysql">
+              <span class="hidden md:block md:text-sm lg:text-base text-gray-600 dark:text-gray-400">MySQL</span>
+            </div>
+            <div class="flex flex-col items-center gap-2">
+              <img src="./assets/img/technologies/html5.svg" class="technology" alt="html">
+              <span class="hidden md:block md:text-sm lg:text-base text-gray-600 dark:text-gray-400">HTML</span>
+            </div>
+            <div class="flex flex-col items-center gap-2">
+              <img src="./assets/img/technologies/css.svg" class="technology" alt="css">
+              <span class="hidden md:block md:text-sm lg:text-base text-gray-600 dark:text-gray-400">CSS</span>
+            </div>
+            <div class="flex flex-col items-center gap-2">
+              <img src="./assets/img/technologies/java.svg" class="technology" alt="java">
+              <span class="hidden md:block md:text-sm lg:text-base text-gray-600 dark:text-gray-400">Java</span>
+            </div>
+            <div class="flex flex-col items-center gap-2">
+              <img src="./assets/img/technologies/mongodb.svg" class="technology" alt="mongodb">
+              <span class="hidden md:block md:text-sm lg:text-base text-gray-600 dark:text-gray-400">MongoDB</span>
+            </div>
+          </div>
+          <div class="flex flex-row items-center justify-around">
+            <div class="flex flex-col items-center gap-2">
+              <img src="./assets/img/technologies/light/github.svg" class="technology technologies" alt="github">
+              <span class="hidden md:block md:text-sm lg:text-base text-gray-600 dark:text-gray-400">Github</span>
+            </div>
+            <div class="flex flex-col items-center gap-2">
+              <img src="./assets/img/technologies/gitlab.svg" class="technology" alt="gitlab">
+              <span class="hidden md:block md:text-sm lg:text-base text-gray-600 dark:text-gray-400">Gitlab</span>
+            </div>
+            <div class="flex flex-col items-center gap-2">
+              <img src="./assets/img/technologies/postgresql.svg" class="technology" alt="postgresql">
+              <span class="hidden md:block md:text-sm lg:text-base text-gray-600 dark:text-gray-400">PostgreSQL</span>
+            </div>
+            <div class="flex flex-col items-center gap-2">
+              <img src="./assets/img/technologies/sql-server.svg" class="technology" alt="sql-server">
+              <span class="hidden md:block md:text-sm lg:text-base text-gray-600 dark:text-gray-400">SQL Server</span>
+            </div>
+            <div class="flex flex-col items-center gap-2">
+              <img src="./assets/img/technologies/tailwindcss.svg" class="technology" alt="tailwindcss">
+              <span class="hidden md:block md:text-sm lg:text-base text-gray-600 dark:text-gray-400">Tailwind CSS</span>
+            </div>
+          </div>
         </div>
       </div>
     </div>
