Apartado de educación - Se agrega el apartado de educación con logo de la escuela, título y año de terminación

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       <!-- animated text -->
       <div class="absolute top-1/2 md:top-1/3 text-xl sm:left-10 sm:text-4xl md:text-6xl left-5 md:left-5 lg:left-5 xl:left-36 xl:text-7xl font-bold">
         <span class="text-gray-600">Desarrollador</span>
-        <p id="text" class="text-teal-500 dark:text-teal-700"></p>
+        <p id="text" class="text-teal-600 dark:text-teal-700"></p>
       </div>
       <!-- texts -->
       <div class="flex flex-col gap-5 rounded-md shadow-lg absolute top-0 bottom-0 mb-16 sm:mb-24 md:mb-10 lg:mt-48 m-auto right-5 lg:right-24 bg-white dark:bg-slate-900 dark:shadow-slate-800 p-6 h-fit w-1/3">
@@ -115,8 +115,8 @@
         </div>
         <!-- right -->
         <div class="my-auto flex flex-col gap-4">
-          <h1 class="text-teal-600 font-bold">ACERCA DE MÍ</h1>
-          <h1 class="text-3xl font-medium dark:text-white">Trayectoria</h1>
+          <h1 class="text-teal-600 dark:text-teal-700 font-bold">ACERCA DE MÍ</h1>
+          <h1 class="text-3xl font-medium dark:text-gray-200">Trayectoria</h1>
           <p class="text-gray-400">
             Soy un desarrollador fullstack con más de <strong>5 años de experiencia</strong> en la creación y optimización de
             sistemas web completos. A lo largo de mi carrera, he trabajado en el desarrollo de módulos frontend
@@ -129,7 +129,7 @@
             tanto de aplicaciones web como móviles. Creo firmemente en el poder de un código limpio y eficiente,
             y en soluciones tecnológicas que escalen sin perder su calidad y efectividad.
           </p>
-          <h1 class="text-3xl font-medium dark:text-white">En mi tiempo libre</h1>
+          <h1 class="text-3xl font-medium dark:text-gray-200">En mi tiempo libre</h1>
           <p class="text-gray-400">
             Cuando no estoy programando, me gusta mantenerme al día con las últimas tendencias tecnológicas.
             Me encanta ir al cine y relajarme con una buena película. Además, disfruto mucho viajar y conocer nuevos lugares,
@@ -146,7 +146,7 @@
       <div class="container mx-auto">
         <div class="flex flex-col gap-7">
           <div class="flex flex-col items-center">
-            <h1 class="text-teal-600 font-bold">TECNOLOGÍAS</h1>
+            <h1 class="text-teal-600 dark:text-teal-700 font-bold">TECNOLOGÍAS</h1>
           </div>
   
           <div class="flex flex-row items-center justify-around">
@@ -213,12 +213,99 @@
       </div>
     </div>
 
+    <!-- educación -->
+    <div id="education" class="pt-20 dark:bg-slate-900">
+      <div class="container mx-auto">
+        <div class="flex flex-col items-center gap-2">
+          <h1 class="text-teal-600 dark:text-teal-700 font-bold">EDUCACIÓN</h1>
+
+          <!-- ingeniería UTEQ -->
+          <div class="flex flex-row gap-3 w-full md:w-2/3 px-2">
+            <div class="flex-none">
+              <span class="flex shrink-0 overflow-hidden w-16 md:w-28 m-auto">
+                <img src="./assets/img/education/uteq.png" alt="uteq">
+              </span>
+            </div>
+            <div class="flex flex-col ml-2 md:ml-4 justify-center w-full">
+              <div class="flex flex-col gap-2">
+                <div class="flex justify-between">
+                  <span class="font-bold text-sm md:text-base">
+                    Ingeniería en Tecnologías de la Información y Comunicación
+                  </span>
+                  <span class="text-gray-400 text-sm md:text-base">
+                    2020
+                  </span>
+                </div>
+                <a href="https://www.uteq.edu.mx" target="_blank">
+                  <span class="text-sm">
+                    Universidad Tecnológica de Querétaro
+                  </span>
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <!-- TSU UTEQ -->
+          <div class="flex flex-row gap-3 w-full md:w-2/3 px-2">
+            <div class="flex-none">
+              <span class="flex shrink-0 overflow-hidden w-16 md:w-28 m-auto">
+                <img src="./assets/img/education/uteq.png" alt="uteq">
+              </span>
+            </div>
+            <div class="flex flex-col ml-2 md:ml-4 justify-center w-full">
+              <div class="flex flex-col gap-2">
+                <div class="flex justify-between">
+                  <span class="font-bold text-sm md:text-base">
+                    TSU en TIC, Área Sistemas Informáticos
+                  </span>
+                  <span class="text-gray-400 text-sm md:text-base">
+                    2018
+                  </span>
+                </div>
+                <a href="https://www.uteq.edu.mx" target="_blank">
+                  <span class="text-sm">
+                    Universidad Tecnológica de Querétaro
+                  </span>
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <!-- técnico CECyTEQ -->
+          <div class="flex flex-row gap-3 w-full md:w-2/3 px-2">
+            <div class="flex-none">
+              <span class="flex shrink-0 overflow-hidden w-16 md:w-28 m-auto">
+                <img src="./assets/img/education/cecyte.png" alt="cecyte">
+              </span>
+            </div>
+            <div class="flex flex-col ml-2 md:ml-4 justify-center w-full">
+              <div class="flex flex-col gap-2">
+                <div class="flex justify-between">
+                  <span class="font-bold text-sm md:text-base">
+                    Técnico en Programación
+                  </span>
+                  <span class="text-gray-400 text-sm md:text-base">
+                    2016
+                  </span>
+                </div>
+                <a href="https://www.cecyteq.edu.mx/" target="_blank">
+                  <span class="text-sm">
+                    CECYTE Plantel Querétaro
+                  </span>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <!-- servicios -->
     <div id="services" class="pt-20 dark:bg-slate-900">
       <div class="container mx-auto">
         <!-- top -->
         <div class="flex flex-col gap-3 items-center">
-          <h1 class="text-teal-600 font-bold">SERVICES</h1>
+          <h1 class="text-teal-600 dark:text-teal-700 font-bold">SERVICIOS</h1>
           <h1 class="text-3xl dark:text-white">What do I offer?</h1>
           <p class="w-1/2 text-center text-gray-400">
             My approach to website design is to create a website that
