Apartado de experiencia y textos en modo oscuro - Se agrega apartado de experencia con los trabajos que he tenido - Se agregan textos para cuando esté el modo oscuro

--- a/index.html
+++ b/index.html
@@ -31,9 +31,6 @@
               <a href="#about">acerca de mí</a>
             </li>
             <li class="hover:text-gray-500">
-              <a href="#services">servicios</a>
-            </li>
-            <li class="hover:text-gray-500">
               <a href="#works">portafolio</a>
             </li>
             <li class="hover:text-gray-500">
@@ -59,9 +56,6 @@
               <a class="hLink" href="#about">sobre mí</a>
             </li>
             <li>
-              <a class="hLink" href="#services">servicios</a>
-            </li>
-            <li>
               <a class="hLink" href="#works">portafolio</a>
             </li>
             <li>
@@ -74,7 +68,7 @@
       <!-- intro content -->
       <!-- animated text -->
       <div class="absolute top-1/2 md:top-1/3 text-xl sm:left-10 sm:text-4xl md:text-6xl left-5 md:left-5 lg:left-5 xl:left-36 xl:text-7xl font-bold">
-        <span class="text-gray-600">Desarrollador</span>
+        <span class="text-gray-600 dark:text-gray-400">Desarrollador</span>
         <p id="text" class="text-teal-600 dark:text-teal-700"></p>
       </div>
       <!-- texts -->
@@ -213,23 +207,150 @@
       </div>
     </div>
 
+    <!-- experiencia -->
+    <div id="experiencia" class="pt-20 dark:bg-slate-900">
+      <div class="container mx-auto">
+        <div class="flex flex-col items-center gap-2">
+          <h1 class="text-teal-600 dark:text-teal-700 font-bold">
+            EXPERIENCIA
+          </h1>
+
+          <div class="mx-2 md:mx-0">
+            <ul class="divide-y divide-dashed border-l">
+              <!-- capi -->
+              <div class="opacity-100 card-job">
+                <li class="relative ml-10 py-4">
+                  <div class="flex flex-1 flex-col justify-start gap-1">
+                    <time class="text-xs text-muted-foreground text-gray-400">
+                      12/2023 - Actualidad
+                    </time>
+                    <h2 class="font-semibold leading-none dark:text-gray-200">
+                      Especialista Fullstack
+                    </h2>
+                    <p class="text-sm text-muted-foreground dark:text-gray-300">
+                      <a href="https://www.linkedin.com/company/capisoftware" target="_blank">
+                        Capi Software
+                      </a>
+                    </p>
+                    <div class="prose text-sm text-muted-foreground dark:text-gray-400">
+                      <ul class="list-disc">
+                        <li>Desarrollar nuevos módulos y funcionalidades al sistema producto de la empresa en Laravel, Angular (con DevExpress) y Bootstrap 4.</li>
+                        <li>Corregir bugs dentro del sistema producto de la empresa.</li>
+                        <li>Optimizar y refactorizar el código del backend y frontend.</li>
+                        <li>Seguimiento de actividades a través de la plataforma Monday.</li>
+                      </ul>
+                    </div>
+                  </div>
+                </li>
+              </div>
+  
+              <!-- ciudad maderas -->
+              <div class="opacity-100 card-job">
+                <li class="relative ml-10 py-4">
+                  <div class="flex flex-1 flex-col justify-start gap-1">
+                    <time class="text-xs text-muted-foreground text-gray-400">
+                      03/2022 - 10/2023
+                    </time>
+                    <h2 class="font-semibold leading-none dark:text-gray-200">
+                      Programador Analista Sr.
+                    </h2>
+                    <p class="text-sm text-muted-foreground dark:text-gray-300">
+                      <a href="https://www.linkedin.com/company/ciudadmaderas" target="_blank">
+                        Ciudad Maderas
+                      </a>
+                    </p>
+                    <div class="prose text-sm text-muted-foreground dark:text-gray-400">
+                      <ul class="list-disc">
+                        <li>Líder de proyecto en sistema reservaciones desarrollado en Angular (con Angular Material), Tailwind CSS y Laravel.</li>
+                        <li>Integración de despliegues automáticos con Github Actions.</li>
+                        <li>Desarrollar funcionalidades nuevas del CRM de la empresa en Codeigniter.</li>
+                        <li>Atender tickets de incidencias.</li>
+                        <li>Mejorar áreas de oportunidad dentro del proceso del desarrollo y control de versiones.</li>
+                      </ul>
+                    </div>
+                  </div>
+                </li>
+              </div>
+  
+              <!-- mti consultoria -->
+              <div class="opacity-100 card-job">
+                <li class="relative ml-10 py-4">
+                  <div class="flex flex-1 flex-col justify-start gap-1">
+                    <time class="text-xs text-muted-foreground text-gray-400">
+                      05/2020 - 01/2022
+                    </time>
+                    <h2 class="font-semibold leading-none dark:text-gray-200">
+                      Programador
+                    </h2>
+                    <p class="text-sm text-muted-foreground dark:text-gray-300">
+                      <a href="https://www.linkedin.com/company/mti-global-consulting" target="_blank">
+                        MTI Consultoría
+                      </a>
+                    </p>
+                    <div class="prose text-sm text-muted-foreground dark:text-gray-400">
+                      <ul class="list-disc">
+                        <li>Desarrollar funcionalidades y librerías para microservicios.</li>
+                        <li>Crear funcionalidades en Java para timbrado de CFDI y Complemento Carta Porte.</li>
+                        <li>Desarrollar módulos de sistemas web en Angular y Oracle JET.</li>
+                        <li>Dar mantenimiento al código de sistemas de backend y frontend.</li>
+                        <li>Elaborar reportes con JasperReports.</li>
+                      </ul>
+                    </div>
+                  </div>
+                </li>
+              </div>
+  
+              <!-- impactos digitales -->
+              <div class="opacity-100 card-job">
+                <li class="relative ml-10 py-4">
+                  <div class="flex flex-1 flex-col justify-start gap-1">
+                    <time class="text-xs text-muted-foreground text-gray-400">
+                      06/2018 - 08/2019
+                    </time>
+                    <h2 class="font-semibold leading-none dark:text-gray-200">
+                      Programador
+                    </h2>
+                    <p class="text-sm text-muted-foreground dark:text-gray-300">
+                      <a href="https://www.linkedin.com/company/impactos-digitales" target="_blank">
+                        Impactos Digitales
+                      </a>
+                    </p>
+                    <div class="prose text-sm text-muted-foreground dark:text-gray-400">
+                      <ul class="list-disc">
+                        <li>Diseñar y construir páginas web en Wordpress y Joomla.</li>
+                        <li>Desarrollar sistemas de cotización en diferentes páginas web de la empresa y clientes.</li>
+                        <li>Diseño de API para una aplicación móvil.</li>
+                        <li>Diseño de interfaces en Figma para una aplicación móvil.</li>
+                      </ul>
+                    </div>
+                  </div>
+                </li>
+              </div>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <!-- educación -->
     <div id="education" class="pt-20 dark:bg-slate-900">
       <div class="container mx-auto">
         <div class="flex flex-col items-center gap-2">
-          <h1 class="text-teal-600 dark:text-teal-700 font-bold">EDUCACIÓN</h1>
+          <h1 class="text-teal-600 dark:text-teal-700 font-bold">
+            EDUCACIÓN
+          </h1>
 
           <!-- ingeniería UTEQ -->
           <div class="flex flex-row gap-3 w-full md:w-2/3 px-2">
             <div class="flex-none">
-              <span class="flex shrink-0 overflow-hidden w-16 md:w-28 m-auto">
+              <span class="flex shrink-0 overflow-hidden w-16 md:w-28 m-auto dark:bg-white">
                 <img src="./assets/img/education/uteq.png" alt="uteq">
               </span>
             </div>
             <div class="flex flex-col ml-2 md:ml-4 justify-center w-full">
               <div class="flex flex-col gap-2">
                 <div class="flex justify-between">
-                  <span class="font-bold text-sm md:text-base">
+                  <span class="font-bold text-sm md:text-base dark:text-gray-200">
                     Ingeniería en Tecnologías de la Información y Comunicación
                   </span>
                   <span class="text-gray-400 text-sm md:text-base">
@@ -237,7 +358,7 @@
                   </span>
                 </div>
                 <a href="https://www.uteq.edu.mx" target="_blank">
-                  <span class="text-sm">
+                  <span class="text-sm dark:text-gray-400">
                     Universidad Tecnológica de Querétaro
                   </span>
                 </a>
@@ -248,14 +369,14 @@
           <!-- TSU UTEQ -->
           <div class="flex flex-row gap-3 w-full md:w-2/3 px-2">
             <div class="flex-none">
-              <span class="flex shrink-0 overflow-hidden w-16 md:w-28 m-auto">
+              <span class="flex shrink-0 overflow-hidden w-16 md:w-28 m-auto dark:bg-white">
                 <img src="./assets/img/education/uteq.png" alt="uteq">
               </span>
             </div>
             <div class="flex flex-col ml-2 md:ml-4 justify-center w-full">
               <div class="flex flex-col gap-2">
                 <div class="flex justify-between">
-                  <span class="font-bold text-sm md:text-base">
+                  <span class="font-bold text-sm md:text-base dark:text-gray-200">
                     TSU en TIC, Área Sistemas Informáticos
                   </span>
                   <span class="text-gray-400 text-sm md:text-base">
@@ -263,7 +384,7 @@
                   </span>
                 </div>
                 <a href="https://www.uteq.edu.mx" target="_blank">
-                  <span class="text-sm">
+                  <span class="text-sm dark:text-gray-400">
                     Universidad Tecnológica de Querétaro
                   </span>
                 </a>
@@ -281,7 +402,7 @@
             <div class="flex flex-col ml-2 md:ml-4 justify-center w-full">
               <div class="flex flex-col gap-2">
                 <div class="flex justify-between">
-                  <span class="font-bold text-sm md:text-base">
+                  <span class="font-bold text-sm md:text-base dark:text-gray-200">
                     Técnico en Programación
                   </span>
                   <span class="text-gray-400 text-sm md:text-base">
@@ -289,7 +410,7 @@
                   </span>
                 </div>
                 <a href="https://www.cecyteq.edu.mx/" target="_blank">
-                  <span class="text-sm">
+                  <span class="text-sm dark:text-gray-400">
                     CECYTE Plantel Querétaro
                   </span>
                 </a>
@@ -300,108 +421,6 @@
       </div>
     </div>
 
-    <!-- servicios -->
-    <div id="services" class="pt-20 dark:bg-slate-900">
-      <div class="container mx-auto">
-        <!-- top -->
-        <div class="flex flex-col gap-3 items-center">
-          <h1 class="text-teal-600 dark:text-teal-700 font-bold">SERVICIOS</h1>
-          <h1 class="text-3xl dark:text-white">What do I offer?</h1>
-          <p class="w-1/2 text-center text-gray-400">
-            My approach to website design is to create a website that
-            strengthens your company’s brand while ensuring ease of use and
-            simplicity for your audience.
-          </p>
-        </div>
-        <!-- bottom -->
-        <div class="p-5 sm:p-0 flex flex-wrap justify-between">
-          <!-- card -->
-          <div
-            class="w-full md:w-4/12 shadow-xl rounded-lg p-5 my-3 md:my-10 flex flex-col gap-3"
-          >
-            <img class="w-10" src="assets/img/icon.png" alt="" />
-            <h1 class="font-medium text-lg dark:text-white">UX / UI Design</h1>
-            <p class="text-gray-400">
-              I specialize in creating interactive websites for individuals and
-              small businesses.
-            </p>
-            <a class="text-teal-600 font-semibold text-sm" href=""
-              >Read More</a
-            >
-          </div>
-          <!-- card -->
-          <div
-            class="w-full md:w-4/12 shadow-xl rounded-lg p-5 my-3 md:my-10 flex flex-col gap-3"
-          >
-            <img class="w-10" src="assets/img/icon.png" alt="" />
-            <h1 class="font-medium text-lg dark:text-white">UX / UI Design</h1>
-            <p class="text-gray-400">
-              I specialize in creating interactive websites for individuals and
-              small businesses.
-            </p>
-            <a class="text-teal-600 font-semibold text-sm" href=""
-              >Read More</a
-            >
-          </div>
-          <!-- card -->
-          <div
-            class="w-full md:w-4/12 shadow-xl rounded-lg p-5 my-3 md:my-10 flex flex-col gap-3"
-          >
-            <img class="w-10" src="assets/img/icon.png" alt="" />
-            <h1 class="font-medium text-lg dark:text-white">UX / UI Design</h1>
-            <p class="text-gray-400">
-              I specialize in creating interactive websites for individuals and
-              small businesses.
-            </p>
-            <a class="text-teal-600 font-semibold text-sm" href=""
-              >Read More</a
-            >
-          </div>
-          <!-- card -->
-          <div
-            class="w-full md:w-4/12 shadow-xl rounded-lg p-5 my-3 md:my-10 flex flex-col gap-3"
-          >
-            <img class="w-10" src="assets/img/icon.png" alt="" />
-            <h1 class="font-medium text-lg dark:text-white">UX / UI Design</h1>
-            <p class="text-gray-400">
-              I specialize in creating interactive websites for individuals and
-              small businesses.
-            </p>
-            <a class="text-teal-600 font-semibold text-sm" href=""
-              >Read More</a
-            >
-          </div>
-          <!-- card -->
-          <div
-            class="w-full md:w-4/12 shadow-xl rounded-lg p-5 my-3 md:my-10 flex flex-col gap-3"
-          >
-            <img class="w-10" src="assets/img/icon.png" alt="" />
-            <h1 class="font-medium text-lg dark:text-white">UX / UI Design</h1>
-            <p class="text-gray-400">
-              I specialize in creating interactive websites for individuals and
-              small businesses.
-            </p>
-            <a class="text-teal-600 font-semibold text-sm" href=""
-              >Read More</a
-            >
-          </div>
-          <!-- card -->
-          <div
-            class="w-full md:w-4/12 shadow-xl rounded-lg p-5 my-3 md:my-10 flex flex-col gap-3"
-          >
-            <img class="w-10" src="assets/img/icon.png" alt="" />
-            <h1 class="font-medium text-lg dark:text-white">UX / UI Design</h1>
-            <p class="text-gray-400">
-              I specialize in creating interactive websites for individuals and
-              small businesses.
-            </p>
-            <a class="text-teal-600 font-semibold text-sm" href=""
-              >Read More</a
-            >
-          </div>
-        </div>
-      </div>
-    </div>
     <!-- works -->
     <div id="works" class="py-40 dark:bg-slate-900">
       <div class="container mx-auto">
