--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           frontend dinámicos y backend robustos, enfocados en API’s eficientes. Fuera del código,
           me apasiona la música electrónica, jugar fútbol y explorar nuevos lugares.
         </p>
-        <a class="hidden md:flex bg-teal-600 dark:bg-teal-700 text-white dark:text-slate-300 text-sm lg:text-xl px-3 py-2 rounded-md font-semibold w-fit"
+        <a class="hidden md:flex bg-teal-600 dark:bg-teal-700 text-white dark:text-gray-300 text-sm lg:text-xl px-3 py-2 rounded-md font-semibold w-fit"
            href="assets/docs/CV.pdf"
            target="_blank">
           <div class="flex flex-row gap-1">
@@ -489,43 +489,53 @@
     </div>
 
     <!-- contact -->
-    <div id="contact" class="dark:bg-slate-900">
+    <div id="contact" class="py-20 dark:bg-slate-900">
       <div class="container mx-auto">
         <!-- top -->
-        <div class="flex flex-col gap-3 items-center">
-          <h1 class="text-teal-600 font-bold">CONTACT</h1>
-          <h1 class="text-3xl dark:text-white">Have a Question?</h1>
-          <p class="w-1/2 text-center text-gray-400">
-            Do you have an idea? Let's discuss it and see what we can do
-            together.
-          </p>
+        <div class="flex flex-col items-center">
+          <h1 class="text-teal-600 dark:text-teal-700 font-bold">CONTACTO</h1>
         </div>
-        <!-- bottom -->
-          <form class="mt-5 p-8 flex flex-col gap-5 items-center">
-          <input
-            class="p-2 w-full md:w-1/2 ring-1 ring-teal-300 rounded-sm dark:bg-slate-800 dark:ring-0 dark:text-white"
-            type="text"
-            placeholder="Name Surname"
-          />
-          <input
-            class="p-2 w-full md:w-1/2 ring-1 ring-teal-300 rounded-sm dark:bg-slate-800 dark:ring-0 dark:text-white"
-            type="email"
-            placeholder="Email"
-          />
-          <textarea
-            class="p-2 w-full md:w-1/2 ring-1 ring-teal-300 rounded-sm dark:bg-slate-800 dark:ring-0 dark:text-white"
-            cols="30"
-            rows="10"
-            placeholder="Message..."
-          ></textarea>
-          <button
-            class="w-1/2 bg-teal-600 text-white font-medium px-3 py-2 rounded-md cursor-pointer"
-          >
-            Submit
-          </button>
-        </form>
+
+        <div class="flex flex-col md:flex-row items-center md:justify-evenly gap-5 mt-20">
+          <div class="flex flex-col items-center justify-center gap-2">
+            <span class="font-bold md:text-xl dark:text-gray-200">
+              Locación
+            </span>
+
+            <span class="text-gray-400">
+              <a href="https://maps.app.goo.gl/VkdHC6V5C3NU4df9A" target="_blank">
+                Querétaro, México
+              </a>
+            </span>
+          </div>
+
+          <div class="flex flex-col items-center justify-center gap-2">
+            <span class="font-bold md:text-xl dark:text-gray-200">
+              Teléfono
+            </span>
+
+            <span class="text-gray-400">
+              <a href="https://wa.me/524423178052/?text=Hola" target="_blank">
+                +52 442-317-8052
+              </a>
+            </span>
+          </div>
+
+          <div class="flex flex-col items-center justify-center gap-2">
+            <span class="font-bold md:text-xl dark:text-gray-200">
+              Correo electrónico
+            </span>
+
+            <span class="text-gray-400">
+              <a href="mailto:tprog.jorge.coronel@outlook.com?subject=Saludos" target="_blank">
+                tprog.jorge.coronel@outlook.com
+              </a>
+            </span>
+          </div>
+        </div>
       </div>
     </div>
+
     <!-- footer -->
     <div class="w-full bg-gray-800">
       <div class="container mx-auto py-5 flex items-center justify-between">
