Se cambian íconos de redes sociales y se agrega espaciado a los lados para móviles

--- a/index.html
+++ b/index.html
@@ -538,7 +538,7 @@
 
     <!-- footer -->
     <div class="w-full bg-gray-800">
-      <div class="container mx-auto py-5 flex items-center justify-between">
+      <div class="container mx-auto py-5 flex items-center justify-between px-2 md:px-0">
         <div class="flex items-center gap-2">
           <img class="w-8" src="assets/img/logo.png" alt="" />
           <span class="text-2xl font-bold text-white">Jorge Coronel</span>
@@ -549,13 +549,13 @@
         <div class="flex gap-2">
           <a href="https://www.instagram.com/jorge_2908" target="_blank">
             <img class="w-4"
-                 src="assets/img/instagram.png"
+                 src="./assets/img/social-media/instagram_dark.svg"
                  alt="instagram" />
           </a>
 
           <a href="https://www.linkedin.com/in/jorge-coronel-gonzalez" target="_blank">
             <img class="w-4"
-                 src="assets/img/linkedin.png"
+                 src="./assets/img/social-media/linkedin.svg"
                  alt="linkedin" />
           </a>
         </div>
