Se agregan íconos en la parte de contacto

--- a/index.html
+++ b/index.html
@@ -496,8 +496,12 @@
           <h1 class="text-teal-600 dark:text-teal-700 font-bold">CONTACTO</h1>
         </div>
 
-        <div class="flex flex-col md:flex-row items-center md:justify-evenly gap-5 mt-20">
+        <div class="flex flex-col md:flex-row items-center md:justify-evenly gap-5 mt-16">
           <div class="flex flex-col items-center justify-center gap-2">
+            <div class="size-10">
+              <img src="./assets/img/contact/marker.svg" alt="marker">
+            </div>
+
             <span class="font-bold md:text-xl dark:text-gray-200">
               Locación
             </span>
@@ -510,6 +514,10 @@
           </div>
 
           <div class="flex flex-col items-center justify-center gap-2">
+            <div class="size-10">
+              <img src="./assets/img/contact/phone.svg" alt="phone">
+            </div>
+
             <span class="font-bold md:text-xl dark:text-gray-200">
               Teléfono
             </span>
@@ -522,6 +530,10 @@
           </div>
 
           <div class="flex flex-col items-center justify-center gap-2">
+            <div class="size-10">
+              <img src="./assets/img/contact/mail.svg" alt="mail">
+            </div>
+
             <span class="font-bold md:text-xl dark:text-gray-200">
               Correo electrónico
             </span>
