Apartado de cursos - Se agrega apartado de los cursos que he terminado junto con la imagen del curso y el link al pdf del certificado

--- a/index.html
+++ b/index.html
@@ -421,6 +421,121 @@
       </div>
     </div>
 
+    <div id="courses" class="pt-20 dark:bg-slate-900">
+      <div class="container mx-auto px-2">
+        <div class="flex flex-col items-center gap-3">
+          <h1 class="text-teal-600 dark:text-teal-700 font-bold">
+            CURSOS
+          </h1>
+          <p class="w-full md:w-3/5 text-center text-gray-400">
+            En esta sección encontrarás una selección de los cursos que he completado a lo largo de mi carrera profesional. Cada uno ha sido clave en la adquisición y perfeccionamiento de habilidades técnicas y conocimientos que aplico día a día en el desarrollo de proyectos.
+          </p>
+        </div>
+
+        <div class="flex flex-wrap p-5 md:p-0 gap-7 justify-between mt-10">
+          <!-- laravel realtime -->
+          <div class="w-full md:w-5/12 lg:w-[30%] transition-all hover:scale-105">
+            <a href="./assets/docs/courses/laravel-realtime.pdf" target="_blank">
+              <div class="flex flex-col dark:bg-slate-800">
+                <img src="./assets/img/courses/laravel-realtime.jpg" alt="laravel-realtime">
+                <div class="h-[140px] flex flex-col justify-between gap-3 p-3 rounded-b-lg shadow-lg dark:shadow-slate-700">
+                  <h1 class="font-bold dark:text-gray-200">
+                    Tiempo real y Laravel: Múltiples apps realtime con Laravel
+                  </h1>
+                  <span class="font-semibold dark:text-gray-200">
+                    Udemy
+                  </span>
+                  <span class="text-sm dark:text-gray-400">
+                    2022
+                  </span>
+                </div>
+              </div>
+            </a>
+          </div>
+
+          <!-- reactiveX -->
+          <div class="w-full h-auto md:w-5/12 lg:w-[30%] transition-all hover:scale-105">
+            <a href="./assets/docs/courses/reactiveX.pdf" target="_blank">
+              <div class="flex flex-col dark:bg-slate-800">
+                <img src="./assets/img/courses/reactiveX.jpg" alt="reactiveX">
+                <div class="h-[140px] flex flex-col justify-between gap-3 p-3 rounded-b-lg shadow-lg dark:shadow-slate-700">
+                  <h1 class="font-bold dark:text-gray-200">
+                    ReactiveX - RxJs: De cero hasta los detalles
+                  </h1>
+                  <span class="font-semibold dark:text-gray-200">
+                    Udemy
+                  </span>
+                  <span class="text-sm dark:text-gray-400">
+                    2022
+                  </span>
+                </div>
+              </div>
+            </a>
+          </div>
+
+          <!-- angular avanzado -->
+          <div class="w-full md:w-5/12 lg:w-[30%] transition-all hover:scale-105">
+            <a href="./assets/docs/courses/angular-avanzado.pdf" target="_blank">
+              <div class="flex flex-col dark:bg-slate-800">
+                <img src="./assets/img/courses/angular-avanzado.jpg" alt="angular-avanzado">
+                <div class="h-[140px] flex flex-col justify-between gap-3 p-3 rounded-b-lg shadow-lg dark:shadow-slate-700">
+                  <h1 class="font-bold dark:text-gray-200">
+                    Angular Avanzado: Lleva tus bases al siguiente nivel - MEAN
+                  </h1>
+                  <span class="font-semibold dark:text-gray-200">
+                    Udemy
+                  </span>
+                  <span class="text-sm dark:text-gray-400">
+                    2022
+                  </span>
+                </div>
+              </div>
+            </a>
+          </div>
+
+          <!-- angular de cero a experto -->
+          <div class="w-full md:w-5/12 lg:w-[30%] transition-all hover:scale-105">
+            <a href="./assets/docs/courses/angular-cero-experto.pdf" target="_blank">
+              <div class="flex flex-col dark:bg-slate-800">
+                <img src="./assets/img/courses/angular-cero-experto.jpg" alt="angular-cero-experto">
+                <div class="h-[140px] flex flex-col justify-between gap-3 p-3 rounded-b-lg shadow-lg dark:shadow-slate-700">
+                  <h1 class="font-bold dark:text-gray-200">
+                    Angular: De cero a experto - (Edición 2021)
+                  </h1>
+                  <span class="font-semibold dark:text-gray-200">
+                    Udemy
+                  </span>
+                  <span class="text-sm dark:text-gray-400">
+                    2021
+                  </span>
+                </div>
+              </div>
+            </a>
+          </div>
+
+          <!-- laravel apiresful -->
+          <div class="w-full md:w-5/12 lg:w-[30%] transition-all hover:scale-105">
+            <a href="./assets/docs/courses/api-resful-laravel.pdf" target="_blank">
+              <div class="flex flex-col dark:bg-slate-800">
+                <img src="./assets/img/courses/api-resful-laravel.jpg" alt="api-resful-laravel">
+                <div class="h-[140px] flex flex-col justify-between gap-3 p-3 rounded-b-lg shadow-lg dark:shadow-slate-700">
+                  <h1 class="font-bold dark:text-gray-200">
+                    API RESTful con Laravel: Guía Definitiva
+                  </h1>
+                  <span class="font-semibold dark:text-gray-200">
+                    Udemy
+                  </span>
+                  <span class="text-sm dark:text-gray-400">
+                    2020
+                  </span>
+                </div>
+              </div>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <!-- works -->
     <div id="works" class="py-40 dark:bg-slate-900">
       <div class="container mx-auto">
