--- a/index.html
+++ b/index.html
@@ -436,9 +436,9 @@
           <!-- laravel realtime -->
           <div class="w-full md:w-5/12 lg:w-[30%] transition-all hover:scale-105">
             <a href="./assets/docs/courses/laravel-realtime.pdf" target="_blank">
-              <div class="flex flex-col dark:bg-slate-800">
+              <div class="flex flex-col dark:bg-slate-800 rounded-b-lg shadow-lg dark:shadow-slate-700">
                 <img src="./assets/img/courses/laravel-realtime.jpg" alt="laravel-realtime">
-                <div class="h-[140px] flex flex-col justify-between gap-3 p-3 rounded-b-lg shadow-lg dark:shadow-slate-700">
+                <div class="h-[140px] flex flex-col justify-between gap-3 p-3">
                   <h1 class="font-bold dark:text-gray-200">
                     Tiempo real y Laravel: Múltiples apps realtime con Laravel
                   </h1>
@@ -456,9 +456,9 @@
           <!-- reactiveX -->
           <div class="w-full h-auto md:w-5/12 lg:w-[30%] transition-all hover:scale-105">
             <a href="./assets/docs/courses/reactiveX.pdf" target="_blank">
-              <div class="flex flex-col dark:bg-slate-800">
+              <div class="flex flex-col dark:bg-slate-800 rounded-b-lg shadow-lg dark:shadow-slate-700">
                 <img src="./assets/img/courses/reactiveX.jpg" alt="reactiveX">
-                <div class="h-[140px] flex flex-col justify-between gap-3 p-3 rounded-b-lg shadow-lg dark:shadow-slate-700">
+                <div class="h-[140px] flex flex-col justify-between gap-3 p-3">
                   <h1 class="font-bold dark:text-gray-200">
                     ReactiveX - RxJs: De cero hasta los detalles
                   </h1>
@@ -476,9 +476,9 @@
           <!-- angular avanzado -->
           <div class="w-full md:w-5/12 lg:w-[30%] transition-all hover:scale-105">
             <a href="./assets/docs/courses/angular-avanzado.pdf" target="_blank">
-              <div class="flex flex-col dark:bg-slate-800">
+              <div class="flex flex-col dark:bg-slate-800 rounded-b-lg shadow-lg dark:shadow-slate-700">
                 <img src="./assets/img/courses/angular-avanzado.jpg" alt="angular-avanzado">
-                <div class="h-[140px] flex flex-col justify-between gap-3 p-3 rounded-b-lg shadow-lg dark:shadow-slate-700">
+                <div class="h-[140px] flex flex-col justify-between gap-3 p-3">
                   <h1 class="font-bold dark:text-gray-200">
                     Angular Avanzado: Lleva tus bases al siguiente nivel - MEAN
                   </h1>
@@ -496,9 +496,9 @@
           <!-- angular de cero a experto -->
           <div class="w-full md:w-5/12 lg:w-[30%] transition-all hover:scale-105">
             <a href="./assets/docs/courses/angular-cero-experto.pdf" target="_blank">
-              <div class="flex flex-col dark:bg-slate-800">
+              <div class="flex flex-col dark:bg-slate-800 rounded-b-lg shadow-lg dark:shadow-slate-700">
                 <img src="./assets/img/courses/angular-cero-experto.jpg" alt="angular-cero-experto">
-                <div class="h-[140px] flex flex-col justify-between gap-3 p-3 rounded-b-lg shadow-lg dark:shadow-slate-700">
+                <div class="h-[140px] flex flex-col justify-between gap-3 p-3">
                   <h1 class="font-bold dark:text-gray-200">
                     Angular: De cero a experto - (Edición 2021)
                   </h1>
@@ -516,9 +516,9 @@
           <!-- laravel apiresful -->
           <div class="w-full md:w-5/12 lg:w-[30%] transition-all hover:scale-105">
             <a href="./assets/docs/courses/api-resful-laravel.pdf" target="_blank">
-              <div class="flex flex-col dark:bg-slate-800">
+              <div class="flex flex-col dark:bg-slate-800 rounded-b-lg shadow-lg dark:shadow-slate-700">
                 <img src="./assets/img/courses/api-resful-laravel.jpg" alt="api-resful-laravel">
-                <div class="h-[140px] flex flex-col justify-between gap-3 p-3 rounded-b-lg shadow-lg dark:shadow-slate-700">
+                <div class="h-[140px] flex flex-col justify-between gap-3 p-3">
                   <h1 class="font-bold dark:text-gray-200">
                     API RESTful con Laravel: Guía Definitiva
                   </h1>
@@ -541,63 +541,100 @@
       <div class="container mx-auto">
         <!-- top -->
         <div class="flex flex-col gap-3 items-center">
-          <h1 class="text-teal-600 font-bold">PORTFOLIO</h1>
-          <h1 class="text-3xl dark:text-white">Works & Projects</h1>
-          <p class="w-1/2 text-center text-gray-400">
-            I help designers, small agencies and businesses bring their ideas to
-            life. Powered by Figma, VS Code and coffee, I turn your requirements
-            into a well-designed websites
+          <h1 class="text-teal-600 dark:text-teal-700 font-bold">
+            PORTAFOLIO
+          </h1>
+          <p class="w-full md:w-3/5 text-center text-gray-400">
+            A lo largo de mi carrera como desarrollador, he trabajado en una amplia variedad de proyectos, aplicando diferentes tecnologías y soluciones para resolver problemas complejos. En esta sección, encontrarás algunos de mis proyectos personales. Cada uno de estos proyectos refleja mi enfoque en la calidad, eficiencia y mejora continua en el desarrollo de software.
           </p>
         </div>
+
         <!-- bottom -->
-        <div class="p-5 sm:p-0 flex flex-wrap justify-between">
-          <!-- card -->
-          <div
-            class="w-full md:w-5/12 lg:w-1/5 shadow-xl rounded-lg my-3 md:my-10 m-1 transition-all hover:scale-110"
-          >
-            <img src="assets/img/item.png" />
+        <div class="flex flex-wrap p-5 md:p-0 gap-7 justify-between mt-10">
+          <!-- home smart -->
+          <div class="w-full md:w-5/12 lg:w-[30%] transition-all">
+            <div class="flex flex-col h-full dark:bg-slate-800 rounded-b-lg shadow-lg dark:shadow-slate-700">
+              <img src="./assets/img/portfolio/home-smart.png" alt="home-smart">
+              <div class="flex flex-col h-full justify-between gap-3 p-3 dark:shadow-slate-700">
+                <h1 class="font-bold dark:text-gray-200">
+                  Home Smart
+                </h1>
+                <span class="text-sm text-gray-400">
+                  Este proyecto es una landing page creada para practicar y perfeccionar habilidades de diseño con CSS. “Home Smart” presenta un diseño moderno y responsivo, enfocado en la presentación de productos para el hogar inteligente.
+                </span>
+                <div class="flex flex-row gap-2">
+                  <span class="bg-teal-600 p-2 text-xs text-white rounded-md">HTML</span>
+                  <span class="bg-teal-600 p-2 text-xs text-white rounded-md">Javacript</span>
+                  <span class="bg-teal-600 p-2 text-xs text-white rounded-md">Tailwind CSS</span>
+                </div>
+                <div class="flex flex-row gap-2 my-2">
+                  <a href="https://jorgecoronelg.github.io/portafolio-landing-home-smart/" target="_blank">
+                    <span class="bg-black p-2 text-xs text-white rounded-md">Web</span>
+                  </a>
+                  <a href="https://github.com/JorgeCoronelG/portafolio-landing-home-smart" target="_blank">
+                    <span class="bg-black p-2 text-xs text-white rounded-md">Github</span>
+                  </a>
+                </div>
+              </div>
+            </div>
           </div>
-          <!-- card -->
-          <div
-            class="w-full md:w-5/12 lg:w-1/5 shadow-xl rounded-lg my-3 md:my-10 m-1 transition-all hover:scale-110"
-          >
-            <img src="assets/img/item.png" />
+
+          <!-- example -->
+          <div class="w-full md:w-5/12 lg:w-[30%] transition-all">
+            <div class="flex flex-col h-full dark:bg-slate-800 rounded-b-lg shadow-lg dark:shadow-slate-700">
+              <img src="./assets/img/portfolio/manage.png" alt="manage">
+              <div class="flex flex-col h-full justify-between gap-3 p-3 dark:shadow-slate-700">
+                <h1 class="font-bold dark:text-gray-200">
+                  Manage
+                </h1>
+                <span class="text-sm text-gray-400">
+                  “Manage” es una landing page diseñada para practicar habilidades de diseño CSS enfocadas en soluciones de software administrativo. A través de este proyecto, se aplicaron técnicas de CSS para crear una interfaz intuitiva y atractiva, asegurando una experiencia de usuario fluida y responsiva en distintos dispositivos.
+                </span>
+                <div class="flex flex-row gap-2">
+                  <span class="bg-teal-600 p-2 text-xs text-white rounded-md">HTML</span>
+                  <span class="bg-teal-600 p-2 text-xs text-white rounded-md">Javacript</span>
+                  <span class="bg-teal-600 p-2 text-xs text-white rounded-md">Tailwind CSS</span>
+                </div>
+                <div class="flex flex-row gap-2 my-2">
+                  <a href="https://jorgecoronelg.github.io/portafolio-landing-manage/" target="_blank">
+                    <span class="bg-black p-2 text-xs text-white rounded-md">Web</span>
+                  </a>
+                  <a href="https://github.com/JorgeCoronelG/portafolio-landing-manage" target="_blank">
+                    <span class="bg-black p-2 text-xs text-white rounded-md">Github</span>
+                  </a>
+                </div>
+              </div>
+            </div>
           </div>
-          <!-- card -->
-          <div
-            class="w-full md:w-5/12 lg:w-1/5 shadow-xl rounded-lg my-3 md:my-10 m-1 transition-all hover:scale-110"
-          >
-            <img src="assets/img/item.png" />
-          </div>
-          <!-- card -->
-          <div
-            class="w-full md:w-5/12 lg:w-1/5 shadow-xl rounded-lg my-3 md:my-10 m-1 transition-all hover:scale-110"
-          >
-            <img src="assets/img/item.png" />
-          </div>
-          <!-- card -->
-          <div
-            class="w-full md:w-5/12 lg:w-1/5 shadow-xl rounded-lg my-3 md:my-10 m-1 transition-all hover:scale-110"
-          >
-            <img src="assets/img/item.png" />
-          </div>
-          <!-- card -->
-          <div
-            class="w-full md:w-5/12 lg:w-1/5 shadow-xl rounded-lg my-3 md:my-10 m-1 transition-all hover:scale-110"
-          >
-            <img src="assets/img/item.png" />
-          </div>
-          <!-- card -->
-          <div
-            class="w-full md:w-5/12 lg:w-1/5 shadow-xl rounded-lg my-3 md:my-10 m-1 transition-all hover:scale-110"
-          >
-            <img src="assets/img/item.png" />
-          </div>
-          <!-- card -->
-          <div
-            class="w-full md:w-5/12 lg:w-1/5 shadow-xl rounded-lg my-3 md:my-10 m-1 transition-all hover:scale-110"
-          >
-            <img src="assets/img/item.png" />
+
+          <!-- example -->
+          <div class="w-full md:w-5/12 lg:w-[30%] transition-all">
+            <div class="flex flex-col h-full dark:bg-slate-800 rounded-b-lg shadow-lg dark:shadow-slate-700">
+              <img src="./assets/img/portfolio/club-lectura.png" alt="club-lectura">
+              <div class="flex flex-col h-full justify-between gap-3 p-3 dark:shadow-slate-700">
+                <h1 class="font-bold dark:text-gray-200">
+                  Club de lectura
+                </h1>
+                <span class="text-sm text-gray-400">
+                  Sistema web desarrollado para gestionar de manera eficiente un club de lectura, permitiendo llevar el control de usuarios, donaciones, libros, préstamos y multas. Este proyecto resalta la integración de funciones administrativas esenciales para mantener un club de lectura bien organizado y funcional.
+                </span>
+                <div class="flex flex-wrap gap-2">
+                  <span class="bg-teal-600 p-2 text-xs text-white rounded-md">Laravel</span>
+                  <span class="bg-teal-600 p-2 text-xs text-white rounded-md">Angular</span>
+                  <span class="bg-teal-600 p-2 text-xs text-white rounded-md">MySQL</span>
+                  <span class="bg-teal-600 p-2 text-xs text-white rounded-md">Tailwind CSS</span>
+                  <span class="bg-teal-600 p-2 text-xs text-white rounded-md">Angular Material</span>
+                </div>
+                <div class="flex flex-row gap-2 my-2">
+                  <a href="https://github.com/JorgeCoronelG/club-lectura-app" target="_blank">
+                    <span class="bg-black p-2 text-xs text-white rounded-md">Github frontend</span>
+                  </a>
+                  <a href="https://github.com/JorgeCoronelG/club-lectura-api" target="_blank">
+                    <span class="bg-black p-2 text-xs text-white rounded-md">Github backend</span>
+                  </a>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
