Agregar padding en texto de sección de portafolio para móviles

--- a/index.html
+++ b/index.html
@@ -544,7 +544,7 @@
           <h1 class="text-teal-600 dark:text-teal-700 font-bold">
             PORTAFOLIO
           </h1>
-          <p class="w-full md:w-3/5 text-center text-gray-400">
+          <p class="w-full md:w-3/5 px-2 md:px-0 text-center text-gray-400">
             A lo largo de mi carrera como desarrollador, he trabajado en una amplia variedad de proyectos, aplicando diferentes tecnologías y soluciones para resolver problemas complejos. En esta sección, encontrarás algunos de mis proyectos personales. Cada uno de estos proyectos refleja mi enfoque en la calidad, eficiencia y mejora continua en el desarrollo de software.
           </p>
         </div>
